# 12-finalproj-2

./: .gitignore  CMakeLists.txt  README.md
layers/: ConvolutionLayer.cpp  ConvolutionLayer.h  ConvolutionLayer.tpp  FullyConnectedLayer.cpp  FullyConnectedLayer.h  FullyConnectedLayer.tpp  Layer.h  Layer.tpp  MaxPoolingLayer.cpp  MaxPoolingLayer.h  MaxPoolingLayer.tpp  PoolingLayer.cpp  PoolingLayer.h
model/: ModularCNN.cpp  ModularCNN.h  ModularCNN.tpp
pybind/: bindings.cpp
python/: test.py
tools/: AMSGrad.cpp  AMSGrad.h  AMSGrad.tpp  ComputationGraph.cpp  ComputationGraph.h  ComputationGraph.tpp  ConnectedWeights.h  ConnectedWeights.tpp  ConvolutionOperation.cpp  ConvolutionOperation.h  ConvolutionOperation.tpp  ConvolutionalWeights.h  ConvolutionalWeights.tpp  CrossEntropy.h  CrossEntropy.tpp  FullyConnectedOperation.cpp  FullyConnectedOperation.h  FullyConnectedOperation.tpp  LayerConfig.cpp  LayerConfig.h  MaxPoolingOperation.cpp  MaxPoolingOperation.h  MaxPoolingOperation.tpp  Operation.cpp  Operation.h  PoolingWeights.h  PoolingWeights.tpp  Tensor.cpp  Tensor.h  Tensor.tpp  WeightStruct.cpp  WeightStruct.h
